Fix T80013: Crash when toggling maximized area

Error renaming variable in 75aeb4b8813d